@@ -12,19 +12,44 @@ namespace LHAPDF {
 
   // Forward declarations to avoid circular dependencies
   class PDF;
+  class PDFSet;
   class Interpolator;
   class Extrapolator;
   class AlphaS;
 
 
-  /// @name Factory functions for making PDFs and other objects
-  //@{
-
-  /// Create a new PDF from the given data file path.
+  /// Get the global configuration object
   ///
-  /// Returns a 'new'ed PDF by pointer.
-  /// The caller is responsible for deletion of the created object.
-  // PDF* mkPDF(const std::string& path);
+  /// The global config is populated by reading from lhapdf.conf if it is found
+  /// in the search paths. It is a singleton, hence the 'get' rather than 'mk'
+  /// function name.
+  ///
+  /// @note The LHAPDF system is responsible for deletion of the returned
+  /// object. Do NOT delete it yourself! Hence the return by reference rather
+  /// than pointer.
+  Info& getConfig();
+
+
+  /// Get the PDFSet with the given set name.
+  ///
+  /// Returns a PDFSet by reference. When this function is used for
+  /// access, only one PDFSet object is made per set name... hence the
+  /// 'get' rather than 'mk' function name.
+  ///
+  /// This function is intended particularly for use where it would be
+  /// inefficient to have to repeatedly construct a PDFSet by name. The
+  /// canonical use case is internal: the Info system uses this to ensure that
+  /// cascading of config settings is efficient, and also allows the automatic
+  /// application of set-level changes to all PDF member objects in that set.
+  ///
+  /// @note The LHAPDF system is responsible for deletion of the returned
+  /// object. Do NOT delete it yourself! Hence the return by reference rather
+  /// than pointer.
+  PDFSet& getPDFSet(const std::string& setname);
+
+
+  /// @name Factory functions for making single PDF members
+  //@{
 
   /// Create a new PDF with the given PDF set name and member ID.
   ///
@@ -38,6 +63,25 @@ namespace LHAPDF {
   /// The caller is responsible for deletion of the created object.
   PDF* mkPDF(int lhaid);
 
+  //@}
+
+
+  /// @name Factory functions for making all PDF members in a set
+  //@{
+
+  /// Get all PDFs in a named set (return by filling the supplied vector).
+  void mkPDFs(const std::string& setname, std::vector<PDF*>& pdfs);
+
+  /// Get all PDFs in a named set (return by a new vector).
+  std::vector<PDF*> mkPDFs(const std::string& setname);
+
+  /// @todo Add a templated version which can return a vector of smart ptrs
+
+  //@}
+
+
+  /// @name Factory functions for making other LHAPDF framework objects
+  //@{
 
   /// Interpolator factory
   ///
