@@ -15,18 +15,12 @@ namespace LHAPDF {
 
   /// Get the singleton global configuration object
   ///
-  /// @todo Move this to somewhere else -- out of Info? In Factories.h?
+  /// @todo Move this out of Info. To Factories.h or SystemConfig.h?
   ///
   /// The global config is populated by reading from lhapdf.conf if it is
   /// found in the search paths.
-  class Info;
-  Info& config();//  {
-  //   static Info _cfg;
-  //   string confpath = findFile("lhapdf.conf").native();
-  //   // cout << "CONFPATH = " << confpath.empty() << endl;
-  //   if (!confpath.empty()) _cfg.load(confpath);
-  //   return _cfg;
-  // }
+  // class Info;
+  // Info& config();
 
 
 
@@ -41,17 +35,9 @@ namespace LHAPDF {
     Info() { }
 
     /// Constructor
-    Info(const std::string& mempath) {
-      loadFull(mempath);
+    Info(const path& path) {
+      load(path);
     }
-
-    /// Constructor from a set name and member ID.
-    Info(const std::string& setname, int member);
-
-    /// Constructor from an LHAPDF ID code.
-    Info(int lhaid);
-
-    /// @todo Add constructors from set name and member, and from LHAPDF ID, cf. the PDF object
 
     /// Virtual destructor to allow inheritance
     virtual ~Info() { }
@@ -67,10 +53,6 @@ namespace LHAPDF {
     /// This function may be called several times to read metadata from several
     /// YAML source files. Values for existing keys will be overwritten.
     void load(const path& filepath);
-
-    /// Load properly cascaded info for a PDF member, including fallback to the set info if it exists
-    /// @todo Remove
-    void loadFull(const path& mempath);
 
     //@}
 
@@ -88,21 +70,32 @@ namespace LHAPDF {
       return _metadict;
     }
 
-    /// Can this Info object return a value for the given key? (it may be defined non-locally)
-    bool has_key(const std::string& key) const {
-      return has_key_local(key) || config().has_key_local(key);
-    }
+
     /// Is a value defined for the given key on this specific object?
     bool has_key_local(const std::string& key) const {
       return _metadict.find(key) != _metadict.end();
     }
-
-    /// Retrieve a metadata string by key name
-    const std::string& metadata(const std::string& key) const {
-      if (has_key_local(key)) return _metadict.find(key)->second; //< value is defined locally -- return that
-      if (this != &config()) return config().metadata(key); //< if this isn't the global Config, ask that
-      throw MetadataError("Metadata for key: " + key + " not found."); //< this is the global Config and key is still not known
+    /// Can this Info object return a value for the given key? (it may be defined non-locally)
+    ///
+    /// Default implementation is equivalent to the local version. This is appropriate for Config.
+    virtual bool has_key(const std::string& key) const {
+      return has_key_local(key);
     }
+
+
+    /// Retrieve a metadata string by key name, as defined on this specific object
+    const std::string& metadata_local(const std::string& key) const {
+      if (has_key_local(key)) return _metadict.find(key)->second;
+      throw MetadataError("Local metadata for key: " + key + " not found.");
+    }
+    /// Retrieve a metadata string by key name
+    ///
+    /// Default implementation is equivalent to the local version. This is appropriate for Config.
+    virtual const std::string& metadata(const std::string& key) const {
+      return metadata_local(key);
+      // throw MetadataError("Metadata for key: " + key + " not found.");
+    }
+
 
     /// Retrieve a metadata string by key name, with an inline type cast
     ///
@@ -126,7 +119,7 @@ namespace LHAPDF {
   protected:
 
     /// The string -> string native metadata storage container
-    map<string, string> _metadict;
+    std::map<std::string, std::string> _metadict;
 
   };
 
@@ -146,6 +139,7 @@ namespace LHAPDF {
     }
     throw MetadataError("'" + s + "' is not a valid string for conversion to bool type");
   }
+
   template <>
   inline std::vector<std::string> Info::metadata(const std::string& key) const {
     const string& s = metadata(key);
@@ -153,6 +147,7 @@ namespace LHAPDF {
     split(rtn, s, is_any_of(","), token_compress_on);
     return rtn;
   }
+
   template <>
   inline std::vector<int> Info::metadata(const std::string& key) const {
     const vector<string> strs = metadata< vector<string> >(key);
@@ -162,6 +157,7 @@ namespace LHAPDF {
     assert(rtn.size() == strs.size());
     return rtn;
   }
+
   template <>
   inline std::vector<double> Info::metadata(const std::string& key) const {
     const vector<string> strs = metadata< vector<string> >(key);
